--- a/Mathe/index.html
+++ b/Mathe/index.html
@@ -134,7 +134,7 @@
       </ol>
 
       <hr />
-      <h2>Tableau</h2>
+      <h2>Tableaux</h2>
       <ul>
         <li>
           <a href="collectionDesFormulesGeometrique.html" class="indexLink">
