--- a/astellungen.html
+++ b/astellungen.html
@@ -32,6 +32,12 @@
                 <option value="damonsFormulaTips">Damons Formula Tips</option>
                 <option value="pastel">Pastel</option>
                 <option value="patriot">Patriot</option>
+                <option value="dyslexiker">Dyslexiker</option>
+                <option value="dyslexiker-bold">Déck Dyslexiker</option>
+                <option value="dyslexiker-dark">Däischter Dyslexiker</option>
+                <option value="dyslexiker-dark-bold">
+                  Déck däischter Dyslexiker
+                </option>
               </select>
             </div>
             <h2>Astellungen fir den Navigator</h2>
