--- a/changeLog.html
+++ b/changeLog.html
@@ -126,7 +126,7 @@
               </li>
             </ul> -->
             <h3>Update 54</h3>
-            <time>.4.2024</time>
+            <time>13.4.2024</time>
             <ul>
               <li class="changeLogText">
                 An Programmen gouf: Diviseure vun enger Zuel, Zoufalls Zuel,
@@ -137,15 +137,24 @@
                 d'Astellungen unn
               </li>
               <li class="changeLogText">
-                Neit Programm: Geometrie Rechemaschinn, Dérivéeë Rechnen
+                Nei Programmen: Geometrie Rechemaschinn, Dérivéeë Rechnen
               </li>
+              <li class="changeLogText">
+                Neie Stiler: Dyslexiker, Däischter Dyslexiker, Déck Dyslexiker,
+                Déck däischter Dyslexiker,
+              </li>
+
               <li class="changeLogText">
                 De Buchstaf Eta: &eta;, ass och elo an der Tabelle: Alphabet, am
                 Divers
               </li>
               <li class="changeLogText">Mathe gouf sortéiert</li>
               <li class="changeLogText">
-                Footer ass elo op méi Plaazen an ass ëmmer ënnen
+                Footer ass elo op méi Plazen an ass ëmmer ënnen
+              </li>
+              <li class="changeLogText">
+                Lëtzebuergesch Feeler goufe mat hëllef vu spellchecker.lu
+                verbessert.
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
@@ -154,7 +163,7 @@
             <ul>
               <li class="changeLogText">
                 De Converter ënnerstetzt elo Kommazuelen, Temperaturen an
-                Exposanten vun 10!
+                Exposante vun 10!
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
