--- a/feedback.html
+++ b/feedback.html
@@ -17,21 +17,21 @@
           <main>
             <h1>Feedback</h1>
             <p calss="block">
-              Wëllkomm op luxformel.info. Feedback ass an alle Formen wëllkomm,
+              Wëllkomm op luxformel.info. Feedback ass an alle Forme wëllkomm,
               Styling, falsch Informatiounen, feelend Themen etc.
             </p>
             <p calss="block">
-              Feedback ass an alle Forme wëllkomm! Et geet drems dass dese Site
-              eng kloer Resource ass fir dei Momenter wann een mol eppes vergies
-              huet oder sech net secher ass oder wann den Internet sech ganz
-              einfach dommstellt an een och wann ee wees dass et do zefannen ass
-              een näischt fennt.
+              Feedback ass an alle Forme wëllkomm! Et geet drëms dass dëse Site
+              eng kloer Ressource ass fir déi Momenter wann ee mol eppes
+              vergiess huet oder sech net sécher ass oder wann den Internet sech
+              ganz einfach domm stellt an een och wann ee weess dass et do ze
+              fannen ass een näischt fënnt.
             </p>
             <p>
-              Ech bieden Ierch Äre Feedback op dei ennen E-mail ze schecken fir
-              dass dese Site zu eppes gett wat emmer an emmer méi relevant fir
-              esou vill wéi méigeleg Leit gett. Wann Dir wellt kennt der och
-              uginn op der wellt dass ech Ären Numm bei d'Ännerung am Change Log
+              Ech bieden Iech Äre Feedback op déi ënne E-mail ze schécke fir
+              dass dëse Site zu eppes gëtt wat ëmmer an ëmmer méi relevant fir
+              esou vill wéi méiglech Leit gëtt. Wann Dir wëllt kennt der och
+              uginn op der wëllt dass ech Ären Numm bei d'Ännerung am Change Log
               schreiwen.
             </p>
             <p class="emailLink">
@@ -41,11 +41,7 @@
               >
             </p>
             <p>
-              Duerch eng Funktioun an all Browser déi sech
-              <q>Browser caching</q>
-              nennt kann et sinn dass een Update vum Site op Ärem Client net
-              richteg ugewiese gett. Fir genau ze sinn weist den dei aal
-              Versioun dann un.
+              Duerch eng Funktioun an all Browser déi sech              <q>Browser caching</q>              nennt kann et sinn dass een Update vum Site op Ärem Client net              richteg ugewise gëtt. Fir genau ze si weist den déi al              Versioun dann un.
             </p>
           </main>
         </div>
