--- a/readme.html
+++ b/readme.html
@@ -20,35 +20,35 @@
             <p class="block">
               Wëllkomm op luxformel.info. Dëse Site gouf vu mir Damon Niederkorn
               an d'Liewe geruff fir Leit déi sech fir STEM interesséieren ze
-              hëllefen. Virun allem d'Onlineléieren soll mat dësem Site
+              hëllefen. Virun allem d'Online léiere soll mat dësem Site
               verbessert ginn.
             </p>
             <p class="block">
               Ech wëll preziséieren dass dëse Site een Hobby ass an am Fong mir
-              perséinlech eppes brenge sollt, mä ech hu mech decidéiert wat ech
-              hei maan fir Jiddereen accesibel ze maan.
+              perséinlech eppes brénge sollt, mä ech hu mech decidéiert wat ech
+              hei maache fir Jiddereen accessibel ze maachen.
             </p>
             <h2>Firwat existéiert dëse Site</h2>
             <p class="block">
-              STEM Fächer kenne schwéier sinn fir ze léieren an se ginn oft
-              nemmen a Schoulen gehaalen. De Firwels sech awer fir déi Themen ze
-              interesséieren sollt keng Limiten hunn an net exklusiv sinn zu
-              enger Zäit an engem sengem Liewen. Jiddereen sollt d'Méiglechkeet
+              STEM Fächer kenne schwéier si fir ze léieren an se ginn oft nëmmen
+              a Schoule gehalen. De Virwëlz sech awer fir déi Themen ze
+              interesséiere sollt keng Limitten hunn an net exklusiv sinn zu
+              enger Zäit an engem sengem Liewen. Jidderee sollt d'Méiglechkeet
               hunn sech zu all Zäitpunkt informéieren ze kennen an dat op eng
-              simpel Art a weis.
+              simpel Aart a weis.
             </p>
             <h2>Printen</h2>
             <p class="block">
               D'Printfunktion ass ofhängeg vun Ärem Browser den Dir benotzt. Dat
-              well heeschen dass versidde Browseren eng anner
-              <q>fit content</q> Astelung hunn. Fir dei beschte Resultater ass
+              well heeschen dass verschidde Browseren eng aner
+              <q>fit content</q> Astellung hunn. Fir déi beschte Resultater ass
               et recommandéiert déi Astellungen an der Dialog-Box selwer an ze
               stellen.
             </p>
             <h3>Problem</h3>
             <p>
-              Aus bis elo onerkannte Grenn ass <q>Print</q> - Funktioun a
-              FireFox gebugged. De Site gett an engem Chromium baséierte Browser
+              Aus bis elo onerkannte Grënn ass <q>Print</q> - Funktioun a
+              FireFox gebugged. De Site gëtt an engem Chromium baséierte Browser
               Programméiert (Brave) et ass recommandéiert dass Dir och ee
               Chromium Browser Benotzt also all Browser ausser : FireFox oder
               Safari, fir déi beschten <q>Print</q> Funktioun. Obwuel Safri bis
@@ -56,10 +56,10 @@
             </p>
             <h2>Feedback</h2>
             <p class="block">
-              Ech bieden Ierch Äre Feedback op déi ënnen verlinkten Email ze
-              schecken fir dass dëse Site zu eppes gett wat ëmmer an ëmmer méi
-              relevant fir esou vill wéi méigeleg Leit gett.<br />
-              Ech wënschen eng 'bonne lecture'.
+              Ech bieden Iech Äre Feedback op déi ënne verlinkten Email ze
+              schécken fir dass dëse Site zu eppes gëtt wat ëmmer an ëmmer méi
+              relevant fir esou vill wéi méiglech Leit gëtt.<br />
+              Ech wënschen eng 'Bonne Lecture'.
             </p>
             <p>
               Email:
@@ -70,32 +70,32 @@
             <h2>Archiv</h2>
             <p class="block">
               D'Archiv wei den Numm et scho seet soll wichteg Informatiounen déi
-              net onbedingt de Site passen späicheren. PDF - Dokumenter sinn
+              net onbedéngt de Site passe späicheren. PDF - Dokumenter sinn
               dofir ee gutt Beispill. Tabellen si gutt op enger Säit fir
-              nozekucken mä ee PDF - Dokument mecht dei Saach méi einfach andems
-              et direkt scho preparéiert ass fir benotzt ze ginn.
+              nozekucken mä ee PDF - Dokument mécht déi Saach méi einfach
+              andeems et direkt scho preparéiert ass fir benotzt ze ginn.
             </p>
             <h2>Astellungen</h2>
             <p class="block">
-              D'Astellungen späicheren Är Prefernzen an dem Browser, an engem
-              Deel den <q>localstorage</q> heescht. Är Astellungen vu luxformel
-              bleiwen also bei refreshing, oder zou maache vum Browser erhaalen.
+              D'Astellunge späicheren Är Preferenzen an dem Browser, an engem
+              Deel den <q>localstorage</q> heescht. Är Astellunge vu luxformel
+              bleiwen also bei refreshing, oder zou maache vum Browser erhalen.
               <br />
               Entdeckt also nei Visuell Stiler vu luxformel.
             </p>
             <h3>Problem</h3>
             <p class="block">
-              D'Printfunktioun gett leider duerch Är Astellungen vun dem Stil
-              beaflosst. Et ass récommandéiert dass dir mat dem <q>Hell</q> Stil
-              d'Printfunktioun benotzt. D'Formelen ginn nämlech nach mat der
-              Faarw vum Stil ugewisen.
+              D'Printfunktioun gëtt leider duerch Är Astellunge vun dem Stil
+              beaflosst. Et ass recommandéiert dass dir mat dem <q>Hell</q> Stil
+              d'Printfunktioun benotzt. D'Formele ginn nämlech nach mat der
+              Faarwe vum Stil ugewisen.
             </p>
             <article class="borderInstall">
               <h2>Installéiere vu Luxformel op macOS Sonoma</h2>
               <div class="hello">
                 <p>
                   Säit macOS 14.1 Sonoma, kënnt Dir ee Site am Dock späicheren.
-                  Ënnen gesi Dir eng Foto vum Prozess. Dir musst juste op File
+                  Ënne gesinn Dir eng Foto vum Prozess. Dir musst just op File
                   drécken an dann op Add to Dock....
                 </p>
 
@@ -111,8 +111,8 @@
               <div class="hello">
                 <p>
                   Luxformel ze installéieren ass ganz einfach! Dréckt einfach
-                  uewen op den Download-Knäppchen de bei ierch am Browser misst
-                  ugewise ginn. Ënnem am Bild ass gewisen wou sech de Knäppche
+                  uewen op den Download-Knäppchen de bei Iech am Browser misst
+                  ugewise ginn. Ënnen am Bild ass gewise wou sech de Knäppche
                   verstoppt an engem Chrome Browser op engem Mac, mä all OS oder
                   Computer misst mat der Method kompatibel sinn.
                 </p>
@@ -127,8 +127,8 @@
                   class="tutorial"
                 />
                 <p>
-                  Wann der op den Download-Knäppchen gedréckt hutt misst eng
-                  Dialog-Box opdauchen, déi Ierch virschléit luxformel ze
+                  Wann der op den Download-Knäppche gedréckt hutt misst eng
+                  Dialog-Box opdauchen, déi Iech virschléit luxformel ze
                   installéieren. Dréckt op <q>Install</q>.
                 </p>
                 <img
@@ -137,7 +137,7 @@
                   class="tutorial"
                 />
                 <p>
-                  D'luxformel PWA misst elo gedownload sinn. Dir kennt elo
+                  D'luxformel PWA misst elo gedownloat sinn. Dir kennt elo
                   luxformel ouni Browser benotzen.
                 </p>
                 <img
@@ -150,11 +150,10 @@
 
             <h2>PWA op iOS an iPadOS</h2>
             <p>
-              Zënter dem Update 17.4 vun iOS an iPadOS kann een duerch
-              Ännerungen vun Apple net méi PWA verlinkungen op dem
-              Springboard/Homescreen hunn. Dëst ass keng limitéierung vu
-              Luxformel mä eng Äntwert op d'EU-Richtlinn vum "Digital Markets
-              Act (DMA)".
+              Zënter dem Update 17.4 vun iOS an iPadOS kann een duerch Ännerunge
+              vun Apple net méi PWA Verlinkungen op dem Springboard/Homescreen
+              hunn. Dëst ass keng Limitéierung vu Luxformel mä eng Äntwert op
+              d'EU-Richtlinn vum "Digital Markets Act (DMA)".
             </p>
 
             <article class="borderInstall">
@@ -165,8 +164,8 @@
               <div class="hello">
                 <p>
                   Luxformel ze verlinken ass ganz einfach! Dréckt einfach ënnen
-                  op den Share-Knäppchen de bei ierch am Browser misst ugewise
-                  ginn. Ënnem am Bild ass gewisen wou sech de Knäppche verstoppt
+                  op de Share-Knäppchen de bei Iech am Browser misst ugewise
+                  ginn. Ënnen am Bild ass gewise wou sech de Knäppche verstoppt
                   am Safari Browser op engem iPhone, mä all OS oder Handy,
                   Tablett misst mat der Method kompatibel sinn.
                 </p>
@@ -176,7 +175,7 @@
                   class="tutorial"
                 />
                 <p>
-                  Wann der op de Share-Knäppchen gedréckt hutt misst de
+                  Wann der op de Share-Knäppche gedréckt hutt misst de
                   Share-Dialog opdauchen. Hei dréckt der
                   <q>Add to Home Screen</q> oder änlech genannte Funktiounen.
                 </p>
@@ -186,8 +185,8 @@
                   class="tutorial"
                 />
                 <p>
-                  Dir kennt elo an engem zweete Schrëtt nach auswielen wéi dass
-                  der déi usech <q>Bookmark</q> nenne wëllt. Dréckt dann wéi hei
+                  Dir kennt elo an engem zweete Schrëtt nach auswiele wéi dass
+                  der déi u sech <q>Bookmark</q> nenne wëllt. Dréckt da wéi hei
                   <q>Add</q>.
                 </p>
                 <img
