--- a/Programmen/diviseureFannen.html
+++ b/Programmen/diviseureFannen.html
@@ -16,6 +16,9 @@
 
     <style>
       /* Additional CSS for styling */
+      body {
+        background-color: var(--background-color);
+      }
       .container {
         max-width: 600px;
         margin: 0 auto;
