--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -60,10 +60,13 @@
         <li>
           <a href="derivee.html" class="indexLink">Dérivéeë Rechnen</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="equatiouneLeisen.html" class="indexLink"
             >Equatioune Léisen</a
           >
+        </li> -->
+        <li>
+          <a href="elementer.html" class="indexLink">Elementer léieren</a>
         </li>
       </ol>
     </div>
