--- a/Programmen/zoufallsZuel.html
+++ b/Programmen/zoufallsZuel.html
@@ -13,6 +13,9 @@
     <title>Zoufalls Zuel</title>
     <style>
       /* Basic CSS for layout */
+      body {
+        background-color: var(--background-color);
+      }
       .container {
         max-width: 600px;
         margin: 0 auto;
@@ -48,6 +51,7 @@
         overflow: hidden;
         padding: 20px;
         margin-bottom: 20px;
+        background-color: var(--white);
       }
       .output-box p {
         margin: 0;
