--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,14 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 55</h3>
+            <time>.2024</time>
+            <ul>
+              <li class="changeLogText">
+                Feeler am Programm Dérivéeë Rechnen gouf verbessert
+              </li>
+              <li class="changeLogText">Tabelle ginn elo besser ugewisen</li>
+            </ul>
             <h3>Update 54</h3>
             <time>13.4.2024</time>
             <ul>
