--- a/Programmen/volumesAiresPerimetre.html
+++ b/Programmen/volumesAiresPerimetre.html
@@ -10,15 +10,15 @@
     <script defer src="javascript/geometry-caculator.js"></script>
 
     <link rel="stylesheet" href="../css/resetStyleSheet.css" />
-    <link rel="stylesheet" href="../css/geometry-calculator.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/geometry-calculator.css" />
     <title>Geometrie Rechemaschinn</title>
   </head>
   <body>
     <my-navigator></my-navigator>
     <div id="container">
       <div class="main-wrapper">
-        <div class="container">
+        <div class="container-geo">
           <h1>Geometrie Rechemaschinn</h1>
           <div class="tabs">
             <div class="tab active" data-target="rectangle">Rectangle</div>
