--- a/Informatik/index.html
+++ b/Informatik/index.html
@@ -24,37 +24,10 @@
           >
         </li>
       </ol> -->
-      <h2>Java</h2>
-      <ol>
-        <li>
-          <a href="javaBasics.html" class="indexLink">Java Basics</a>
-        </li>
-        <li>
-          <a href="javaPromblemesTypes.html" class="indexLink"
-            >Java problèmes types</a
-          >
-        </li>
-
-        <li>
-          <a href="javaArrayLists.html" class="indexLink">Java Array Lists</a>
-        </li>
-      </ol>
-      <h2>HTML</h2>
-      <ol>
-        <li>
-          <a href="htmlBasics.html" class="indexLink">HTML Basics</a>
-        </li>
-      </ol>
       <h2>CSS</h2>
       <ol>
         <li>
           <a href="cssBasics.html" class="indexLink">CSS Basics</a>
-        </li>
-      </ol>
-      <h2>LaTeX</h2>
-      <ol>
-        <li>
-          <a href="latexBasics.html" class="indexLink">LATEX Basics</a>
         </li>
       </ol>
       <h2>Digitaltechnik</h2>
@@ -73,6 +46,43 @@
           <a href="codes.html" class="indexLink">Codes</a>
         </li>
       </ol>
+      <h2>HTML</h2>
+      <ol>
+        <li>
+          <a href="htmlBasics.html" class="indexLink">HTML Basics</a>
+        </li>
+      </ol>
+      <h2>Java</h2>
+      <ol>
+        <li>
+          <a href="javaBasics.html" class="indexLink">Java Basics</a>
+        </li>
+        <li>
+          <a href="javaPromblemesTypes.html" class="indexLink"
+            >Java problèmes types</a
+          >
+        </li>
+
+        <li>
+          <a href="javaArrayLists.html" class="indexLink">Java Array Lists</a>
+        </li>
+      </ol>
+
+      <h2>LaTeX</h2>
+      <ol>
+        <li>
+          <a href="latexBasics.html" class="indexLink">LATEX Basics</a>
+        </li>
+      </ol>
+      <!-- <h2>Machine Learning</h2>
+      <ol>
+        <li>
+          <a href="fondationsDuMachineLearning.html" class="indexLink"
+            >fondations du Machine Learning</a
+          >
+        </li>
+      </ol> -->
+
       <hr />
       <h2>Tabellen</h2>
       <ol>
