--- a/Programmen/index.html
+++ b/Programmen/index.html
@@ -68,6 +68,9 @@
         <li>
           <a href="elementer.html" class="indexLink">Elementer léieren</a>
         </li>
+        <li>
+          <a href="textLieser.html" class="indexLink">Text Lieser</a>
+        </li>
       </ol>
     </div>
     <footer id="footer">
