--- a/changeLog.html
+++ b/changeLog.html
@@ -126,12 +126,21 @@
               </li>
             </ul> -->
             <h3>Update 55</h3>
-            <time>.2024</time>
+            <time>24.4.2024</time>
             <ul>
+              <li class="changeLogText">Nei Kapitelen an der Informatik:</li>
+              <li class="changeLogText">Ergänzungen am Kapitel Probabilité</li>
+              <li class="changeLogText">
+                Nei Programmen: Elementer léieren, Text Lieser
+              </li>
+              <li class="changeLogText">
+                An der Informatik goufen d'Kapitelen alphabetesch sortéiert
+              </li>
               <li class="changeLogText">
                 Feeler am Programm Dérivéeë Rechnen gouf verbessert
               </li>
               <li class="changeLogText">Tabelle ginn elo besser ugewisen</li>
+              <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 54</h3>
             <time>13.4.2024</time>
