--- a/Programmen/elementer.html
+++ b/Programmen/elementer.html
@@ -22,12 +22,7 @@
         border-radius: 8px;
         padding: 20px;
         box-shadow: 0 4px 8px var(--black);
-      }
-      h1 {
-        color: var(--black);
-      }
-      p {
-        color: var(--black);
+        margin-top: 3rem;
       }
       select,
       input[type="text"] {
@@ -38,7 +33,7 @@
         border: 1px solid var(--background-color);
         border-radius: 4px;
         box-sizing: border-box;
-        font-size: 16px;
+        font-size: 1rem;
       }
       button {
         background-color: var(--accentColor);
@@ -48,7 +43,7 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 1rem;
       }
       button:hover {
         opacity: 0.8;
@@ -56,7 +51,7 @@
       #feedback {
         margin-top: 20px;
         color: var(--darker-greyColor);
-        font-size: 18px;
+        font-size: 1.2rem;
       }
       .info {
         padding: 0.2rem;
