--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,16 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 56</h3>
+            <time>.5.2024</time>
+            <ul>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
+            <h3>Update 56</h3>
+            <time>.5.2024</time>
+            <ul>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 55</h3>
             <time>24.4.2024</time>
             <ul>
