--- a/Archiv/Bicher/index.html
+++ b/Archiv/Bicher/index.html
@@ -26,7 +26,7 @@
             </p>
           </div>
           <div class="book-cover">
-            <a href="pdf/1_Millioun_Stelle_vu_Pi.pdf">
+            <a href="pdf/1_Millioune_Stelle_vu_Pi.pdf">
               <img src="img/Luxformel_Pi_cover.png" alt="Book Cover 1" />
             </a>
           </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="book-card">
           <div class="book-info">
-            <h2>1 Millioun Stelle vun phi</h2>
+            <h2>1 Millioun Stelle vu phi</h2>
             <p class="book-description">
               Dat wuel spannendst Buch bis deckt Geheimnisser op nach ni gesi
               vun de stierfleche Leit, an alles huet et mam nombre d'or ze dinn…
