--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -48,13 +48,13 @@
           <a class="indexLink" href="Informatik/index.html">Informatik</a>
         </li>
       </ol>
-      <h2>Luxformel Bicher</h2>
+      <!-- <h2>Luxformel Bicher</h2>
       <hr />
       <ol>
         <li>
           <a class="indexLink" href="Bicher/index.html">Bicher</a>
         </li>
-      </ol>
+      </ol> -->
     </div>
     <footer id="footer">
       <p class="footerTextColor">
