--- a/Programmen/converter.html
+++ b/Programmen/converter.html
@@ -9,8 +9,8 @@
     <script async src="../Themes JavaScript/themeChapter.js"></script>
     <script defer src="converter-code.js"></script>
 
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/converter.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/converter.css" />
 
     <title>Converter</title>
   </head>
