--- a/assets/side-navigator.html
+++ b/assets/side-navigator.html
@@ -196,5 +196,6 @@
     >
     <a href="/Technologie/zahnradtriebe.html">Zahnradtriebe</a>
   </div>
-  <a href="#contact">Contact</a>
+  <a href="/Archiv/index.html">Archiv</a>
+  <a href="/Programmen/index.html">Programmen</a>
 </div>
