--- a/changeLog.html
+++ b/changeLog.html
@@ -129,7 +129,7 @@
               </li>
             </ul> -->
             <h3>Update 56</h3>
-            <time>8.7.2024</time>
+            <time>9.7.2024</time>
             <ul>
               <li class="changeLogText">
                 Neien Navigator: Side Navigator, kënnt automatesch wann Är
@@ -140,6 +140,10 @@
                 zu enger neier Interface zesummen,neien Design:
                 <q>hover</q> Effekt gouf geännert an d'Linke sinn elo an engem
                 ronne Rechteck
+              </li>
+              <li class="changeLogText">
+                Retroformel erlaabt et ee Bléck zeréck an d'Zäit ze kréien an
+                d'Joer 2022 a wéi Luxformel deemools ausgesinn huet!
               </li>
               <li class="changeLogText">
                 Bei Messtechnik gouf de Footer ewech geholl
