--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@
                 </div>
               </a>
 
+              <a href="/retroformel.html" class="frontPageBoxlinks">
+                <div class="boxlink">
+                  <h3>Retro Formel</h3>
+                </div>
+              </a>
+
               <a href="changeLog.html" class="frontPageBoxlinks">
                 <div class="boxlink">
                   <h3>Change Log</h3>
